# regime-detector

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: collect-data.yml
src/regime_detector/: __init__.py  __main__.py  catalog.py  cli.py  sources.py
src/regime_detector/collectors/: bok.py  common.py  fred.py  fundamentals.py  kosis.py  yahoo.py
tests/: test_catalog.py
